k3s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: wordpress
  labels:
    app: wordpress
    type: database
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
        type: database
    spec:
      containers:
        - name: wordpress
          image: mariadb
          ports:
            - containerPort: 3306
              name: db-port
          volumeMounts: 
            - name: mysql-vol
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-vol
          persistentVolumeClaim:
            claimName: mysql-pvc
