k3s/wordPress-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: wordpress
  labels:
    app: wordpress
    type: frontend
spec:
  selector:
    app: wordpress
    type: frontend
  ports:
    - name: http-sv-port
      port: 80
      targetPort: http-port
#    - name: https-sv-port
 #     port: 443
  #    targetPort: https-port
  type: NodePort
